<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LoginManager</string>
    <string name="action_settings">Settings</string>
    <string name="service_started">Service for auto login runs!</string>
    <string name="info1">1. Enter the ZDV-Account and save.</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="save">Save</string>
    <string name="service">Start/Stop</string>
    <string name="info2">2. Start or Stop the service for auto login.</string>
    <string name="info">This app can only be used in dormitories of Studierendenwerk-Mainz to logging into the Internet!</string>
    <string name="account_data_enter">Enter the account data!</string>
    <string name="service_enable">Service enable!</string>
    <string name="service_disable">Service disable!</string>
    <string name="account_data_save">Save!</string>

</resources>
